--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -63,6 +63,7 @@ CONFIG_HZ_100=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
+CONFIG_VM_MAX_READAHEAD=2048
 CONFIG_SECCOMP=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 CONFIG_ARMV8_DEPRECATED=y
