--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -714,6 +714,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
 CONFIG_PAGE_OWNER=y
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_DETECT_HUNG_TASK=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
