--- a/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea-f10-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea-f10-cmd.dtsi
@@ -57,6 +57,7 @@
 			17000 15500 30000 8000 3000>;
 		qcom,mdss-dsi-panel-peak-brightness = <4300000>;
 		qcom,mdss-dsi-panel-blackness-level = <3230>;
+		qcom,mdss-dsi-panel-fod-dimlayer-enabled;
 
 		qcom,samsung-prepare-hbm;
 		qcom,dispparam-enabled;
