--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -265,6 +265,7 @@ CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_MEMORY_STATE_TIME=y
+CONFIG_TI_DRV8846=y
 CONFIG_FPR_FPC=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
@@ -381,21 +382,14 @@ CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_ST=y
-CONFIG_TOUCHSCREEN_HIMAX_CHIPSET=y
-CONFIG_TOUCHSCREEN_HIMAX_I2C=y
-CONFIG_TOUCHSCREEN_HIMAX_INCELL=y
-CONFIG_TOUCHSCREEN_HIMAX_IC_HX83112=y
-CONFIG_TOUCHSCREEN_HIMAX_DEBUG=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_EXTRA_SYSFS=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
+CONFIG_TOUCHSCREEN_GOODIX_GTX8=y
+CONFIG_TOUCHSCREEN_TDDI_DBCLK=y
 CONFIG_INPUT_MISC=y
+CONFIG_INPUT_AKM09970=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_INPUT_FINGERPRINT=y
+CONFIG_FINGERPRINT_GOODIX_TA=y
 # CONFIG_SERIO is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
@@ -451,6 +445,7 @@ CONFIG_MFD_SPMI_PMIC=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
 CONFIG_REGULATOR_QPNP_AMOLED=y
+CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
@@ -473,6 +468,8 @@ CONFIG_DRM_MSM_REGISTER_LOGGING=y
 CONFIG_DRM_SDE_RSC=y
 CONFIG_DRM_ANALOGIX_ANX7625=y
 CONFIG_DRM_LT_LT9611=y
+CONFIG_FB_ARMCLCD=y
+CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -778,6 +775,7 @@ CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_SND_SOC_SM6150=y
 CONFIG_SND_SOC_TFA9874=y
+CONFIG_SND_SOC_TFA9874_FOR_DAVI=y
 CONFIG_SND_SOC_WCD934X=y
 CONFIG_SND_SOC_WCD934X_DSD=y
 CONFIG_SND_SOC_WCD934X_MBHC=y
@@ -797,3 +795,4 @@ CONFIG_VA_MACRO=y
 CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
 CONFIG_WSA_MACRO=y
+CONFIG_MACH_XIAOMI_F10=y
