--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -386,6 +386,7 @@ CONFIG_TOUCHSCREEN_GOODIX_GTX8=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_TOUCHSCREEN_TDDI_DBCLK=y
 CONFIG_INPUT_MISC=y
+CONFIG_INPUT_AKM09970=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_FINGERPRINT=y
