--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -387,6 +387,8 @@ CONFIG_TOUCHSCREEN_TDDI_DBCLK=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_INPUT_FINGERPRINT=y
+CONFIG_FINGERPRINT_GOODIX_TA=y
 # CONFIG_SERIO is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
